scenarios/06-extensions/http-ext-auth-missing-backend/00-auth-namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: auth
  labels:
    app.kubernetes.io/part-of: demo
