scenarios/06-extensions/http-ext-auth-missing-backend/20-auth-referencegrant.yaml
apiVersion: gateway.networking.k8s.io/v1beta1
kind: ReferenceGrant
metadata:
  name: allow-backend-a-httproute-to-missing-ext-authz
  namespace: auth
spec:
  from:
    - group: gateway.networking.k8s.io
      kind: HTTPRoute
      namespace: backend-a
  to:
    - group: ""
      kind: Service
      name: external-authz-missing
